Remove warnings in OnlineGameActivity